810-canary-deployments/web-application-blue/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: blue
  template:
    metadata:
      labels:
        app: echo
        version: blue
    spec:
      containers:
        - name: echo
          image: "docker.io/hashicorp/http-echo"
          args:
            - -listen=:8080
            - --text="echo-blue"
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
