810-canary-deployments/web-application-blue/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-blue
  labels:
    version: blue
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: echo
    version: blue
