810-canary-deployments/web-application-blue/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: ingress-echo
  labels:
    version: blue
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web-application-canary-<YOURNAME>.workshop.metakube.org # <-- please adjust <YOURNAME>
      secretName: workshop-tls-cert
  rules:
    - host: web-application-canary-<YOURNAME>.workshop.metakube.org # <-- please adjust <YOURNAME>
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: echo-blue
                port:
                  number: 8080
